fix top spacing

--- a/src/Components/Navbar/_index.scss
+++ b/src/Components/Navbar/_index.scss
@@ -14,6 +14,7 @@
 	}
 
 	@include mq(large) {
+		margin-top: 3rem;
 		&::before {
 			content: '';
 			width: calc(75% - 775px);
@@ -72,7 +73,6 @@
 		justify-content: space-between;
 		align-items: center;
 		transform: translateX(0);
-		backdrop-filter: none;
 
 		// space between links
 		& > * + * {
